Creacion nueva API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ApiParametrizacion
+
+spring.datasource.url=jdbc:mariadb://iu51mf0q32fkhfpl.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/qs58vsedzpr4mma5
+spring.datasource.username=kyjapvqoeyewm9ik
+spring.datasource.password=	mloxu4drkuuqfa3k
+spring.datasource.driver.class=org.mariadb.jdbc.Driver
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.minimum-idle=1
